Fix: Chart titles overflowing

--- a/app/globals.css
+++ b/app/globals.css
@@ -143,3 +143,7 @@ body {
   background-size: contain;
   background-repeat: no-repeat;
 }
+
+.recharts-surface {
+  overflow: visible;
+}
